Fix Map on product details and add map-search component
The Map on product details was poorly styled and has now been updated to fit into the border of the details. Also the map is now not covering the overlay.

The MapSearch component is now the old Map component and the Map component does not support search anymore.

--- a/frontend/src/app/components/home/product/product-information/product-information.component.scss
+++ b/frontend/src/app/components/home/product/product-information/product-information.component.scss
@@ -27,6 +27,7 @@
   justify-content: center;
   align-items: center;
   transition: all .3s ease-in-out;
+  z-index: 1000;
 
   .overlay-content {
     height: 40%;
